# overlap-estimation

./: .gitignore  LICENSE  README.md  project_overview.md  pyproject.toml  requirements.txt
overlap_detection/: __init__.py  annotation_gui.py  auto_aligner.py  config.py  description.py  detection.py  geometry.py  liop.py  matching.py  metrics.py  mldb.py  orchestrator.py  preprocessing.py  reporting.py  types.py  verification.py
reports/full_defaults_prosac/: report.md
reports/no_green_4/: report.md
reports/no_green_both_prosac_1/: report.md
reports/no_green_full/: report.md
scripts/: annotate_dataset.py  generate_report.py  regenerate_report_with_tiers.py  run_experiment.py
tests/: test_annotation_gui.py  test_description.py  test_detection.py  test_geometry.py  test_matching.py  test_metrics.py  test_orchestrator.py  test_preprocessing.py  test_reporting.py  test_verification.py
